--- a/essential-js-concepts/cookie-consent/index.css
+++ b/essential-js-concepts/cookie-consent/index.css
@@ -83,7 +83,7 @@ main {
   height: 420px;
   width: 350px;
   border-radius: 5px;
-  box-shadow: 0 0 6px 2px #666;
+  box-shadow: 0px 0px 6px 2px #666;
   background-color: #212529;
   color: whitesmoke;
 }
@@ -129,6 +129,9 @@ main {
   padding: 8px 16px;
   display: flex;
   justify-content: center;
+}
+.reverse {
+  flex-direction: row-reverse;
 }
 
 .modal-btn {
